modules/tests/_kubernetes-policy/fixtures/edge-identity/oidc-backend-wrong-hostname/resources.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: kanidm-oidc
  namespace: identity
spec:
  endpoints:
  - fqdn:
      hostname: external.example
      port: 443
